### kitEvent

(c) 2011 - 2012 by phpManufaktur
Ralf Hertsch, Stockholmer Str. 31, 13359 Berlin (Germany)
http://phpManufaktur.de - ralf.hertsch@phpManufaktur.de

0.36 - NOT PUBLISHED

* fixed: update script reset the individual configuration settings
* fixed: invalid constant in droplet kit_monthly_calendar

0.35 - 2012-10-25

* fixed changed placeholder names in the templates ($event.group.description,
  $event.description.short, $event.description.long, $event.link.detail a.o.)
* changed about dialog for usage of Markdown syntax
* added jQuery motTableSorter
* updated Droplets for usage of jQuery motTableSorter - use parameter
  tablesorter=true to activate the table sorter for your form
* added sample template /templates/frontend/presets/11/DE to show how to display
  events in a list, using motTableSorter for sorting

0.34 - 2012-10-21

* updated DE language file
* moved CSS file for the DatePicker to /presets/css
* added parameter fnSort for preselect sorting to /presets/dataTable.jquery
* fixed a wrong declaration in /templates/backend/DE/order.list.dwoo

0.33 - 2012-10-19

* added missing translate() commands in the templates
* fixed wrong path to jQuery dataTable
* updated DE language file

0.32 - 2012-10-18

* removed check for early kitEvent versions from precheck.php
* fixed: install.php try to create the old configuration table
* added missing initalization for manufakturConfig in class monthlyCalendar
* added jQuery DataTable for usage in the backend
* changed layout for the event and order list for usage of jQuery DataTable
* added a "delete" button to the order list
* redesigned the order detail dialog (backend)

0.31 - 2012-10-01

* added additional placeholder for ISO date format
* added template /10 with sample for event micro data
* extended code cleanup at all classes and files
* moved all templates from /htt to /templates, separate by frontend, enable
  custom templates for the backend and for the search results