@@ -62,3 +62,26 @@
     </tbody>
   </table>
 </div>
+{* 
+ * Uncomment the following #pager div if you want to use the paging function - 
+ * you must also uncomment the pager command in 
+ * /modules/kit_event/presets/tableSorter.jquery !
+ *}
+ 
+{*
+<div id="pager" class="pager">
+	<form>
+		<img src="{$module.directory}/presets/motTableSorter/addons/pager/icons/first.png" class="first"/>
+		<img src="{$module.directory}/presets/motTableSorter/addons/pager/icons/prev.png" class="prev"/>
+		<input type="text" class="pagedisplay"/>
+		<img src="{$module.directory}/presets/motTableSorter/addons/pager/icons/next.png" class="next"/>
+		<img src="{$module.directory}/presets/motTableSorter/addons/pager/icons/last.png" class="last"/>
+		<select class="pagesize">
+			<option selected="selected"  value="10">10</option>
+			<option value="20">20</option>
+			<option value="30">30</option>
+			<option  value="40">40</option>
+		</select>
+	</form>
+</div>
+*}
