@@ -8,6 +8,9 @@ http://phpManufaktur.de - ralf.hertsch@phpManufaktur.de
 
 * fixed: update script reset the individual configuration settings
 * fixed: invalid constant in droplet kit_monthly_calendar
+* added: paging function for the tableSorter in tableSorter.jquery and the
+  in /templates/frontend/preset/11/DE/frontend.view.active.dwoo - you must
+  uncomment the paging function to activate it.
 
 0.35 - 2012-10-25
 
